updates sign button visibility issues, not finished

--- a/website/src/static/SportsData.css
+++ b/website/src/static/SportsData.css
@@ -58,5 +58,10 @@
   margin-top: -80px;
   overflow: hidden;
   margin-left: 150px;
+
   opacity: 0;
+}
+.sport-container:hover .sports-span {
+  transition: 0.2s ease-in;
+  opacity: 1;
 }
